# Snake-Game-in-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
